paypalurl and loading page

--- a/views/user/landingPage.ejs
+++ b/views/user/landingPage.ejs
@@ -173,99 +173,11 @@
 	<!-- end product Area -->
 
 
-		<!-- Start category Area -->
-		<section class="category-area">
-			<div class="container">
-				<div class="row justify-content-center">
-					<div class="col-lg-8 col-md-12">
-						<div class="row">
-							<div class="col-lg-8 col-md-8">
-								<div class="single-deal">
-									<div class="overlay"></div>
-									<img class="img-fluid w-100" src="/assets/img/category/c1.jpg" alt="">
-									<a href="/assets/img/category/c1.jpg" class="img-pop-up" target="_blank">
-										<div class="deal-details">
-											<h6 class="deal-title">Sneaker for Sports</h6>
-										</div>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-4 col-md-4">
-								<div class="single-deal">
-									<div class="overlay"></div>
-									<img class="img-fluid w-100" src="/assets/img/category/c2.jpg" alt="">
-									<a href="/assets/img/category/c2.jpg" class="img-pop-up" target="_blank">
-										<div class="deal-details">
-											<h6 class="deal-title">Sneaker for Sports</h6>
-										</div>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-4 col-md-4">
-								<div class="single-deal">
-									<div class="overlay"></div>
-									<img class="img-fluid w-100" src="/assets/img/category/c3.jpg" alt="">
-									<a href="/assets/img/category/c3.jpg" class="img-pop-up" target="_blank">
-										<div class="deal-details">
-											<h6 class="deal-title">Product for Couple</h6>
-										</div>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-8 col-md-8">
-								<div class="single-deal">
-									<div class="overlay"></div>
-									<img class="img-fluid w-100" src="/assets/img/category/c4.jpg" alt="">
-									<a href="/assets/img/category/c4.jpg" class="img-pop-up" target="_blank">
-										<div class="deal-details">
-											<h6 class="deal-title">Sneaker for Sports</h6>
-										</div>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-6">
-						<div class="single-deal">
-							<div class="overlay"></div>
-							<img class="img-fluid w-100" src="/assets/img/category/c5.jpg" alt="">
-							<a href="/assets/img/category/c5.jpg" class="img-pop-up" target="_blank">
-								<div class="deal-details">
-									<h6 class="deal-title">Sneaker for Sports</h6>
-								</div>
-							</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- End category Area -->
+		
 
 	
 
-	<!-- Start brand Area -->
-	<section class="brand-area section_gap">
-		<div class="container">
-			<div class="row">
-				<a class="col single-img" href="#">
-					<img class="img-fluid d-block mx-auto" src="/assets/img/brand/1.png" alt="">
-				</a>
-				<a class="col single-img" href="#">
-					<img class="img-fluid d-block mx-auto" src="/assets/img/brand/2.png" alt="">
-				</a>
-				<a class="col single-img" href="#">
-					<img class="img-fluid d-block mx-auto" src="/assets/img/brand/3.png" alt="">
-				</a>
-				<a class="col single-img" href="#">
-					<img class="img-fluid d-block mx-auto" src="/assets/img/brand/4.png" alt="">
-				</a>
-				<a class="col single-img" href="#">
-					<img class="img-fluid d-block mx-auto" src="/assets/img/brand/5.png" alt="">
-				</a>
-			</div>
-		</div>
-	</section>
-	<!-- End brand Area -->
+	
 
 	<!-- Start related-product Area -->
 	<section class="related-product-area section_gap_bottom">
@@ -274,13 +186,12 @@
 				<div class="col-lg-6 text-center">
 					<div class="section-title">
 						<h1>Deals of the Week</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-							magna aliqua.</p>
+						<p></p>
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-9">
+				<div class="col-lg-12">
 					<div class="row">
 						<div class="col-lg-4 col-md-4 col-sm-6 mb-20">
 							<div class="single-related-product d-flex">
@@ -392,13 +303,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-3">
-					<div class="ctg-right">
-						<a href="#" target="_blank">
-							<img class="img-fluid d-block mx-auto" src="/assets/img/category/c5.jpg" alt="">
-						</a>
-					</div>
-				</div>
+				
 			</div>
 		</div>
 	</section>
@@ -476,7 +381,7 @@
 			</div>
 			<div class="footer-bottom d-flex justify-content-center align-items-center flex-wrap">
 				<p class="footer-text m-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | SuperUser made with <i class="fa fa-heart-o" aria-hidden="true"></i></a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 </p>
 			</div>
