--- a/views/user/_headerNavBar.ejs
+++ b/views/user/_headerNavBar.ejs
@@ -25,14 +25,14 @@
                                
                             </ul>
                         </li>
-                        <li class="nav-item submenu dropdown">
+                        <!-- <li class="nav-item submenu dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                              aria-expanded="false">Apparel</a>
                             <ul class="dropdown-menu">
                                 <li class="nav-item"><a class="nav-link" href="blog.html">Hoodies</a></li>
                                 <li class="nav-item"><a class="nav-link" href="single-blog.html">Accessories</a></li>
                             </ul>
-                        </li>
+                        </li> -->
                         <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
 
                         <li class="nav-item submenu dropdown ">
