--- a/views/user/landingPage.ejs
+++ b/views/user/landingPage.ejs
@@ -79,8 +79,8 @@
 				<div class="col-lg-6 no-padding exclusive-right">
 					<div class="active-exclusive-product-slider">
 						<!-- single exclusive carousel -->
-						<% if (content) { %>
-							<% content.forEach(element => { %>
+						<% if (allProduct) { %>
+							<% allProduct.forEach(element => { %>
 						<div class="single-exclusive-slider">
 							<img class="img-fluid" src="<%= element.image[0] %>" alt="">
 							<div class="product-details">
@@ -113,32 +113,79 @@
 
 
 	<!-- start product Area -->
-	<section class=" section_gap">
+	<section class=" owl-carousel active-product-area  section_gap">
 		<!-- single product slide -->
 		<div class="single-product-slider">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-lg-6 text-center">
 						<div class="section-title">
-							<h1>Latest Products</h1>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-								dolore
-								magna aliqua.</p>
+							<h1>Nike</h1>
+							<p>Nike produces a wide range of sports equipment and apparel. Their first products were track running shoes. Nike Air Max is a line of shoes first released by Nike, Inc. in 1987. </p>
 						</div>
 					</div>
 				</div>
 				<div class="row">
-					
-					
-					
 					<!-- single product -->
-					<% if (content) { %>
-						<% content.forEach(element => { %>
+					<% if (nike) { %>
+						<% nike.forEach(element => { %>
+						 
+							<div class="col-lg-3 col-md-6">
+								<div class="single-product">
+									<img class="img-fluid" src="<%= element.image[0] %>" alt="">
+									<div class="product-details">
+										<h6><%= element.brand.name %></h6>
+										<a href="/product-detail?id=<%= element._id%>"><h6><%= element.name %></h6></a>
+										<div class="price">
+											<h6><%= element.price %></h6>
+										</div>
+										<div class="prd-bottom">
+		
+											<a href="/add-to-cart/<%= element._id %>" class="social-info">
+												<span class="ti-bag" href=""></span>
+												<p class="hover-text">Cart</p>
+											</a>
+											<a href="" class="social-info">
+												<span class="lnr lnr-heart"></span>
+												<p class="hover-text">Wishlist</p>
+											</a>
+											
+											
+										</div>
+									</div>
+								</div>
+							</div>
+
+						<% }) %>
+					 
+					<% } %>
+					
+					
+					
+				</div>
+			</div>
+		</div>
+		<!-- single product slide -->
+		<div class="single-product-slider">
+			<div class="container">
+				<div class="row justify-content-center">
+					<div class="col-lg-6 text-center">
+						<div class="section-title">
+							<h1>Adidas</h1>
+							<p>The first Adidas item of apparel was the Franz Beckenbauer tracksuit created in 1967. Adidas AG is the largest manufacturer of sports bras in Europe, and the second largest manufacturer in the world.</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<!-- single product -->
+					<% if (adidas) { %>
+						<% adidas.forEach(element => { %>
 					<div class="col-lg-3 col-md-6">
 						<div class="single-product">
 							<img class="img-fluid" src="<%= element.image[0] %>" alt="">
 							<div class="product-details">
-								<h6><%= element.name %></h6>
+								<h6><%= element.brand.name %></h6>
+									<a href="/product-detail?id=<%= element._id%>"><h6><%= element.name %></h6></a>
 								<div class="price">
 									<h6><%= element.price %></h6>
 									
@@ -163,14 +210,64 @@
 					<% }) %>
 					 
 					<% } %>
-
-
-
 				</div>
+
+				
 			</div>
 		</div>
+
+
+
 		<!-- single product slide -->
-		
+		<div class="single-product-slider">
+			<div class="container">
+				<div class="row justify-content-center">
+					<div class="col-lg-6 text-center">
+						<div class="section-title">
+							<h1>New Balance</h1>
+							<p>New Balance manufactures a range of shoes and apparel. It maintains a manufacturing presence in the United States, as well as in the United Kingdom for the European market, where it produces some of its most popular models such as the 990</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<!-- single product -->
+					<% if (newBalance) { %>
+						<% newBalance.forEach(element => { %>
+					<div class="col-lg-3 col-md-6">
+						<div class="single-product">
+							<img class="img-fluid" src="<%= element.image[0] %>" alt="">
+							<div class="product-details">
+								<h6><%= element.brand.name %></h6>
+									<a href="/product-detail?id=<%= element._id%>"><h6><%= element.name %></h6></a>
+								<div class="price">
+									<h6><%= element.price %></h6>
+									
+								</div>
+								<div class="prd-bottom">
+
+									<a href="/add-to-cart/<%= element._id %>" class="social-info">
+										<span class="ti-bag"></span>
+										<p class="hover-text">add to bag</p>
+									</a>
+									<a href="" class="social-info">
+										<span class="lnr lnr-heart"></span>
+										<p class="hover-text">Wishlist</p>
+									</a>
+									
+									
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<% }) %>
+					 
+					<% } %>
+				</div>
+
+				
+			</div>
+		</div>
 	</section>
 	<!-- end product Area -->
 
@@ -188,121 +285,34 @@
 				<div class="col-lg-6 text-center">
 					<div class="section-title">
 						<h1>Deals of the Week</h1>
-						<p></p>
+						<p>Use Code <b>"women10"</b> to get 10% off on selected Products</p>
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="row">
-						<div class="col-lg-4 col-md-4 col-sm-6 mb-20">
-							<div class="single-related-product d-flex">
-								<a href="#"><img src="/assets/img/r1.jpg" alt=""></a>
-								<div class="desc">
-									<a href="#" class="title">Black lace Heels</a>
-									<div class="price">
-										<h6>$189.00</h6>
-										<h6 class="l-through">$210.00</h6>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-6 mb-20">
-							<div class="single-related-product d-flex">
-								<a href="#"><img src="/assets/img/r2.jpg" alt=""></a>
-								<div class="desc">
-									<a href="#" class="title">Black lace Heels</a>
-									<div class="price">
-										<h6>$189.00</h6>
-										<h6 class="l-through">₹210.00</h6>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-6 mb-20">
-							<div class="single-related-product d-flex">
-								<a href="#"><img src="/assets/img/r3.jpg" alt=""></a>
-								<div class="desc">
-									<a href="#" class="title">Black lace Heels</a>
-									<div class="price">
-										<h6>$189.00</h6>
-										<h6 class="l-through">₹210.00</h6>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-6 mb-20">
-							<div class="single-related-product d-flex">
-								<a href="#"><img src="/assets/img/r5.jpg" alt=""></a>
-								<div class="desc">
-									<a href="#" class="title">Black lace Heels</a>
-									<div class="price">
-										<h6>$189.00</h6>
-										<h6 class="l-through">$210.00</h6>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-6 mb-20">
-							<div class="single-related-product d-flex">
-								<a href="#"><img src="/assets/img/r6.jpg" alt=""></a>
-								<div class="desc">
-									<a href="#" class="title">Black lace Heels</a>
-									<div class="price">
-										<h6>$189.00</h6>
-										<h6 class="l-through">$210.00</h6>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-6 mb-20">
-							<div class="single-related-product d-flex">
-								<a href="#"><img src="/assets/img/r7.jpg" alt=""></a>
-								<div class="desc">
-									<a href="#" class="title">Black lace Heels</a>
-									<div class="price">
-										<h6>$189.00</h6>
-										<h6 class="l-through">$210.00</h6>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-6">
-							<div class="single-related-product d-flex">
-								<a href="#"><img src="/assets/img/r9.jpg" alt=""></a>
-								<div class="desc">
-									<a href="#" class="title">Black lace Heels</a>
-									<div class="price">
-										<h6>$189.00</h6>
-										<h6 class="l-through">$210.00</h6>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-6">
-							<div class="single-related-product d-flex">
-								<a href="#"><img src="/assets/img/r10.jpg" alt=""></a>
-								<div class="desc">
-									<a href="#" class="title">Black lace Heels</a>
-									<div class="price">
-										<h6>$189.00</h6>
-										<h6 class="l-through">$210.00</h6>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-6">
-							<div class="single-related-product d-flex">
-								<a href="#"><img src="/assets/img/r11.jpg" alt=""></a>
-								<div class="desc">
-									<a href="#" class="title">Black lace Heels</a>
-									<div class="price">
-										<h6>$189.00</h6>
-										<h6 class="l-through">$210.00</h6>
-									</div>
-								</div>
-							</div>
-						</div>
+
+
+						<% if (ladies) { %>
+							<% ladies.forEach(element => { %>
+							   <div class="col-lg-4 col-md-4 col-sm-6">
+								   <div class="single-related-product d-flex">
+									   <a href="#"><img src="<%= element.image[0] %>" style="height: 100px;" alt=""></a>
+									   <div class="desc">
+										   <a href="#" class="title"><%= element.name %></a>
+										   <div class="price">
+											   <h6 class="l-through"><%= element.price %></h6>
+											   <h6 ><%= element.price-=element.price*10/100 %></h6>
+										   </div>
+									   </div>
+								   </div>
+							   </div>
+							<% }) %>
+						   <% } %>
+						
+
+
 					</div>
 				</div>
 				
@@ -312,83 +322,7 @@
 	<!-- End related-product Area -->
 
 	<!-- start footer Area -->
-	<footer class="footer-area section_gap">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-3  col-md-6 col-sm-6">
-					<div class="single-footer-widget">
-						<h6>About Us</h6>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore
-							magna aliqua.
-						</p>
-					</div>
-				</div>
-				<div class="col-lg-4  col-md-6 col-sm-6">
-					<div class="single-footer-widget">
-						<h6>Newsletter</h6>
-						<p>Stay update with our latest</p>
-						<div class="" id="mc_embed_signup">
-
-							<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-							 method="get" class="form-inline">
-
-								<div class="d-flex flex-row">
-
-									<input class="form-control" name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '"
-									 required="" type="email">
-
-
-									<button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
-									<div style="position: absolute; left: -5000px;">
-										<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-									</div>
-
-									<!-- <div class="col-lg-4 col-md-4">
-												<button class="bb-btn btn"><span class="lnr lnr-arrow-right"></span></button>
-											</div>  -->
-								</div>
-								<div class="info"></div>
-							</form>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3  col-md-6 col-sm-6">
-					<div class="single-footer-widget mail-chimp">
-						<h6 class="mb-20">Instragram Feed</h6>
-						<ul class="instafeed d-flex flex-wrap">
-							<li><img src="/assets/img/i1.jpg" alt=""></li>
-							<li><img src="/assets/img/i2.jpg" alt=""></li>
-							<li><img src="/assets/img/i3.jpg" alt=""></li>
-							<li><img src="/assets/img/i4.jpg" alt=""></li>
-							<li><img src="/assets/img/i5.jpg" alt=""></li>
-							<li><img src="/assets/img/i6.jpg" alt=""></li>
-							<li><img src="/assets/img/i7.jpg" alt=""></li>
-							<li><img src="/assets/img/i8.jpg" alt=""></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-lg-2 col-md-6 col-sm-6">
-					<div class="single-footer-widget">
-						<h6>Follow Us</h6>
-						<p>Let us be social</p>
-						<div class="footer-social d-flex align-items-center">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-dribbble"></i></a>
-							<a href="#"><i class="fa fa-behance"></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="footer-bottom d-flex justify-content-center align-items-center flex-wrap">
-				<p class="footer-text m-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | SuperUser made with <i class="fa fa-heart-o" aria-hidden="true"></i></a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-</p>
-			</div>
-		</div>
-	</footer>
+	<%- include('_footerArea') %>
 	<!-- End footer Area -->
 
 	<%- include('_userfooter') %>
