--- a/views/user/_sideBar.ejs
+++ b/views/user/_sideBar.ejs
@@ -3,7 +3,7 @@
          <div class="col-xl-3 col-lg-4 col-md-5">
             <div class="sidebar-categories">
                 <div class="head">Browse Categories</div>
-                <ul class="main-categories"> 
+                <!-- <ul class="main-categories"> 
                     <li class="main-nav-list"><a data-toggle="collapse" href="#fruitsVegetable" aria-expanded="false" aria-controls="fruitsVegetable"><span
                              class="lnr lnr-arrow-right"></span>Gender<span class="number">(5)</span></a>
                         <ul class="collapse" id="fruitsVegetable" data-toggle="collapse" aria-expanded="false" aria-controls="fruitsVegetable">
@@ -13,7 +13,7 @@
                             
                         </ul>
                     </li>
-                </ul>
+                </ul> -->
             </div>
             <div class="sidebar-filter mt-50">
                 <div class="top-filter-head">Product Filters</div>
